--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -37,6 +37,13 @@
   padding: 8px 16px;
 }
 
+.common-description{
+ color: rgba(117, 117, 117, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
 /* header style */
 
 header {
@@ -49,6 +56,8 @@ header {
     background-size:
      110px 724px, 
     auto;  
+
+    background-color: #FFF8F3;
 }
 
 /* navbar style  */
@@ -110,10 +119,6 @@ nav ul li a {
 }
 
 .banner-description {
-  color: rgba(117, 117, 117, 1);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
   margin: 0;
   padding-bottom: 30px;
 }
@@ -139,3 +144,97 @@ nav ul li a {
   width: 584px;
   height: 676px;
 }
+
+
+/* about stye  */
+
+.about{
+  background-color: rgba(255, 248, 243, 1);
+  border-radius: 10px;
+  max-width: 1140px;
+  margin: 126px 226px;
+  padding: 116px 154px;
+
+
+}
+.section-title{
+color: rgba(24, 24, 24, 1);
+font-size: 32px;
+font-weight: 700;
+line-height: 46px;
+text-align: center;
+}
+
+.about-description{
+text-align: center;
+padding: 30px 0;
+}
+
+.about-items{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}
+
+.about-item{
+text-align: center;
+}
+
+.item-description {
+   color: rgba(117, 117, 117, 1);
+    font-weight: 600;
+}
+
+
+
+/* skill style */
+
+.skills{
+  margin-bottom: 128px;
+}
+.skill-description{
+  max-width: 906px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 28px;
+  margin-bottom: 48px;
+}
+
+
+.skills-details{
+  max-width: 1140px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  margin: 0 auto;
+}
+
+.skill-card{
+width: 267px;
+padding: 30px;
+border-radius: 5px;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+background: rgba(255, 255, 255, 1);
+}
+
+.icon{
+width: 42px;
+height: 42px;
+margin-bottom: 30px;
+}
+
+.skill-name{
+color: rgba(24, 24, 24, 1);
+font-size: 20px;
+font-weight: 700;
+line-height: 27px;
+text-align: left;
+margin-bottom: 16px;
+}
+
+.skill-set-description{
+  text-align: left;
+}
+
+
